--- a/action.yml
+++ b/action.yml
@@ -11,17 +11,12 @@ runs:
   using: "composite"
   steps:
     - uses: actions/checkout@v2.3.4
-    - uses: cachix/install-nix-action@v13
-      with:
-        install_url: https://nixos-nix-install-tests.cachix.org/serve/i6laym9jw3wg9mw6ncyrk6gjx4l34vvx/install
-        install_options: '--tarball-url-prefix https://nixos-nix-install-tests.cachix.org/serve'
-        extra_nix_config: |
-          experimental-features = nix-command flakes
+    - uses: cachix/install-nix-action@v14.2
     - run: |
         git config --global user.email "auto-update-flake@github.com"
         git config --global user.name "Flake Auto Update"
-        nix flake update --commit-lock-file
-        if nix flake check; then
+        nix --extra-experimental-features 'nix-command flakes' flake update --commit-lock-file
+        if echo -n | nix --extra-experimental-features 'nix-command flakes' flake check; then
             git push origin master
         fi
       shell: bash
